# jpv2g

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.rst  THIRD_PARTY.rst
docs/: DEVELOPER_ESP32_ARDUINO.md
examples/: microcontroller_usage_stub.c
include/jpv2g/: backend.h  byte_utils.h  cbv2g_adapter.h  cbv2g_codec.h  codec.h  config.h  config_loader.h  constants.h  discovery.h  ev_controller.h  evcc.h  evse_controller.h  handler.h  jpv2g.h  log.h  messages.h  net_iface.h  platform_compat.h  poll_compat.h  raw_exi.h  sdp.h  secc.h  security.h  session.h  session_ctx.h  simple_flow.h  state_evcc.h  state_machine.h  state_secc.h  time_compat.h  timeouts.h  tls.h  transport.h  types.h  v2gtp.h
platformio/esp32_arduino_smoke/: README.md  extra_script.py  platformio.ini
platformio/esp32_arduino_smoke/src/: main.cpp
platformio/esp32s3_slac_hlc_precharge/: README.md  extra_script.py  platformio.ini
platformio/esp32s3_slac_hlc_precharge/src/: main.cpp
src/: backend.c  byte_utils.c  cbv2g_adapter.c  cbv2g_codec.c  codec.c  config.c  config_loader.c  discovery.c  ev_controller.c  evcc.c  evse_controller.c  handler.c  main_stub.c  net_iface.c  sdp.c  secc.c  security.c  session.c  session_ctx.c  simple_flow.c  state_evcc.c  state_machine.c  state_secc.c  time_compat.c  tls.c  transport.c  v2gtp.c
tests/: CMakeLists.txt  jpv2g_unit_test.c
